# napari-findaureus

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  test_and_deploy.yml
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
src/findaureus/: Debugging.py  Module_Class.py  Segment_Boxes.py  __init__.py  _reader.py  _widget.py  function_test.py  main.py  model_architecture.py  module_needed.py  napari.yaml
src/findaureus/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
