[metadata]
name = napari-findaureus
version = attr: findaureus.__version__
description = Locate bacteria in CLSM obtained infected bone tissue images
long_description = file: README.md
long_description_content_type = text/markdown

author = Shibarjun Mandal
author_email = shibarjunmandal@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    magicgui
    qtpy
    napari[all]
    aicsimageio==4.11.0 
    nd2==0.5.3
    aicspylibczi==3.1.2 
    fsspec==2023.5.0
    readlif==0.6.5
    czifile==2019.7.2
    tifffile==2023.7.10
    webcolors==1.13
    opencv-python==4.7.0.72
    numpy==1.24.3
    scikit-image==0.20.0
    xmltodict

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-findaureus = findaureus:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
